@@ -3,7 +3,6 @@ package com.example.yuya0817.ReviveSeat;
 import android.app.Activity;
 import android.content.Intent;
 import android.os.Bundle;
-import android.os.Handler;
 import android.util.Log;
 import android.view.View;
 import android.widget.Button;
@@ -13,38 +12,18 @@ import android.widget.ToggleButton;
 import org.json.JSONException;
 import org.json.JSONObject;
 
-import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 
-import io.socket.IOAcknowledge;
-import io.socket.IOCallback;
-import io.socket.SocketIO;
-import io.socket.SocketIOException;
-
-
-//import com.github.nkzawa.socketio.client.Socket;
+import io.socket.client.IO;
+import io.socket.client.Socket;
+import io.socket.emitter.Emitter;
 
 public class Confirmation extends Activity {
 
-    private Handler handler = new Handler();
-    public static SocketIO socket;
-    public static String title,item,hour,minute,text;
-    public static int categoryid,shopid,tableid,userid,seatinfo;
-
-//    public static SocketIO getsocket(){return socket;}
-
+    public Socket socket;
+    public String title,item,hour,minute,text,seat1,seat2,seat3,seat4,seat;
+    public int categoryid,shopid,tableid,userid,seatinfo,share_id;
     private ToggleButton toggleButton1, toggleButton2, toggleButton3, toggleButton4;
-
-//    private com.github.nkzawa.socketio.client.Socket mSocket;
-//    {
-//        try {
-//            IO.Options opts = new IO.Options();
-//            // IO.socket("サーバーから提示提供されたURL");
-//            mSocket = IO.socket("https://reviveseatserver.herokuapp.com/socketio-test.html");
-//            //mSocket = IO.socket("https://revuveserver.herokuapp.com/");
-//        } catch (URISyntaxException e) {
-//            e.printStackTrace();
-//        }
-//    }
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -73,11 +52,22 @@ public class Confirmation extends Activity {
         String sheet3 = data.getStringExtra("sheet3");
         String sheet4 = data.getStringExtra("sheet4");
 
+        seat1 = data.getStringExtra("seat1");
+        seat2 = data.getStringExtra("seat2");
+        seat3 = data.getStringExtra("seat3");
+        seat4 = data.getStringExtra("seat4");
+        Log.d("seat1",seat1);
+        Log.d("seat2",seat2);
+        Log.d("seat3",seat3);
+        Log.d("seat4",seat4);
+
+        seat = seat1+seat2+seat3+seat4;
+        Log.d("seat",seat);
+
         toggleButton1 = (ToggleButton) findViewById(R.id.button1);
         toggleButton1.setTextOn(sheet1);
         toggleButton1.setTextOff(sheet1);
         toggleButton1.setChecked(false);
-
 
         toggleButton2 = (ToggleButton) findViewById(R.id.button2);
         toggleButton2.setTextOn(sheet2);
@@ -94,31 +84,80 @@ public class Confirmation extends Activity {
         toggleButton4.setTextOff(sheet4);
         toggleButton4.setChecked(false);
 
-
         titletext.setText(title);
         categorytext.setText(item);
         timetext.setText(hour + "時" + minute + "分");
         hosokutext.setText(text);
 
-        categoryid = new Integer(item).intValue();
+        categoryid = Integer.valueOf(item);
         shopid = 1;
         tableid = 1;
         userid = 1;
-        seatinfo = 1002;
+        seatinfo = Integer.valueOf(seat);
 
         Button myButton = (Button) findViewById(R.id.next);
         myButton.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                try {
-                    connectSocketIO();
-                } catch (Exception e) {
-                    e.printStackTrace();
-                }
+                Log.d("0","0");
 
-                //mSocket.on("test_back", onNewMessage);
                 Intent intent = new Intent(Confirmation.this, wait.class);
-                Log.d("7","7");
+                try {
+                    socket = IO.socket("https://reviveseatserver.herokuapp.com/");
+                    Log.d("1","1");
+                } catch (URISyntaxException e) {
+                    e.printStackTrace();
+                    Log.e("-1","-1");
+                }
+                socket.on(Socket.EVENT_CONNECT, new Emitter.Listener() {
+
+                    @Override
+                    public void call(Object... args) {
+                        Log.d("2","2-1");
+                        // Sending an object
+                        JSONObject obj = new JSONObject();
+                        try {
+                            obj.put("title", title);
+                            obj.put("category_id", categoryid);
+                            obj.put("endtime", hour + ":" + minute);
+                            obj.put("explain", text);
+                            obj.put("shopid", shopid);
+                            obj.put("tableid", tableid);
+                            obj.put("userid", userid);
+                            obj.put("seatinfo", seatinfo);
+                        } catch (JSONException e) {
+                            e.printStackTrace();
+                        }
+                        socket.emit("sharetable_start", obj);
+                        //socket.disconnect();
+                    }
+
+                }).on("sharetable_start_back", new Emitter.Listener() {
+
+                    @Override
+                    public void call(Object... args) {
+                        Log.d("3","3");
+//                        JSONObject obj2 = (JSONObject)args[0];
+//                        try {
+//                            share_id = obj2.getInt("share_id");
+//                        } catch (JSONException e) {
+//                            return;
+//                        }
+                        //Log.d("recieve", String.valueOf(share_id));
+                        //socket.on("",);
+                        socket.disconnect();
+                    }
+
+                }).on(Socket.EVENT_DISCONNECT, new Emitter.Listener() {
+
+                    @Override
+                    public void call(Object... args) {
+                        Log.d("4","4");
+                    }
+
+                });
+                socket.connect();
+
                 startActivity(intent);
             }
         });
@@ -178,11 +217,11 @@ public class Confirmation extends Activity {
 //        }
 //    };
 
-    private void connectSocketIO() throws MalformedURLException {
-        // ローカルホストの3000のポートに接続開始
-        socket = new SocketIO("https://reviveseatserver.herokuapp.com/socketio-test.html");
+//    private void connectSocketIO() throws MalformedURLException {
+//        // ローカルホストの3000のポートに接続開始
+//        socket = new SocketIO("https://reviveseatserver.herokuapp.com/socketio-test.html");
 //        //socket = new SocketIO("http://172.20.10.2:2010");
-        socket.connect(socketIOCallback);
+//        socket.connect(socketIOCallback);
 
 //        socket = new SocketIO();
 //        socket.connect("https://reviveseatserver.herokuapp.com/socketio-test.html", socketIOCallback);
@@ -238,13 +277,13 @@ public class Confirmation extends Activity {
 //
 //
 //        socket.connect(iocallback);
-    }
+//    }
 
-    private IOCallback socketIOCallback = new IOCallback() {
-
-        @Override
-        public void onConnect() {
-            System.out.println("onConnect");
+//    private IOCallback socketIOCallback = new IOCallback() {
+//
+//        @Override
+//        public void onConnect() {
+//            System.out.println("onConnect");
 //            try {
 //                // イベント送信
 //                JSONObject json = new JSONObject();
@@ -254,53 +293,53 @@ public class Confirmation extends Activity {
 //            } catch (JSONException e) {
 //                e.printStackTrace();
 //            }
-            socket.emit("test", "hello");
-        }
-
-        @Override
-        public void onDisconnect() {
-            System.out.println("onDisconnect");
-        }
-
-        @Override
-        public void onMessage(JSONObject json, IOAcknowledge ack) {
-            System.out.println("onMessage");
-        }
-
-        @Override
-        public void onMessage(String data, IOAcknowledge ack) {
-            System.out.println("onMessage");
-        }
-
-        @Override
-        public void on(String event, IOAcknowledge ack, Object... args) {
-            Log.d("5","5");
-
-            final JSONObject message = (JSONObject)args[0];
-
-            new Thread(new Runnable() {
-                public void run() {
-                    handler.post(new Runnable() {
-                        public void run() {
-                            try {
-                                // メッセージが空でなければ追加
-                                Log.d("message",message.toString());
-                                message.put("share_id", message);
-                            } catch (JSONException e) {
-                                e.printStackTrace();
-                            }
-                        }
-                    });
-                }
-            }).start();
-        }
-
-        @Override
-        public void onError(SocketIOException socketIOException) {
-            System.out.println("onError");
-            socketIOException.printStackTrace();
-        }
-    };
+//            socket.emit("test", "hello");
+//        }
+//
+//        @Override
+//        public void onDisconnect() {
+//            System.out.println("onDisconnect");
+//        }
+//
+//        @Override
+//        public void onMessage(JSONObject json, IOAcknowledge ack) {
+//            System.out.println("onMessage");
+//        }
+//
+//        @Override
+//        public void onMessage(String data, IOAcknowledge ack) {
+//            System.out.println("onMessage");
+//        }
+//
+//        @Override
+//        public void on(String event, IOAcknowledge ack, Object... args) {
+//            Log.d("5","5");
+//
+//            final JSONObject message = (JSONObject)args[0];
+//
+//            new Thread(new Runnable() {
+//                public void run() {
+//                    handler.post(new Runnable() {
+//                        public void run() {
+//                            try {
+//                                // メッセージが空でなければ追加
+//                                Log.d("message",message.toString());
+//                                message.put("share_id", message);
+//                            } catch (JSONException e) {
+//                                e.printStackTrace();
+//                            }
+//                        }
+//                    });
+//                }
+//            }).start();
+//        }
+//
+//        @Override
+//        public void onError(SocketIOException socketIOException) {
+//            System.out.println("onError");
+//            socketIOException.printStackTrace();
+//        }
+//    };
 
 //    public void sendEvent(View view){
 //        try {
@@ -336,18 +375,17 @@ public class Confirmation extends Activity {
 //        intent.putExtra("seatinfo", seatinfo);
 //        this.startService(intent);
 //    }
-
-    @Override
-    protected void onResume() {
-        super.onResume();
-    }
-    @Override
-    protected void onPause() {
-        super.onPause();
-    }
-    @Override
-    public void onStop() {
-        super.onStop();
-    }
+//
+//    @Override
+//    protected void onResume() {
+//        super.onResume();
+//    }
+//    @Override
+//    protected void onPause() {
+//        super.onPause();
+//    }
+//    @Override
+//    public void onStop() {
+//        super.onStop();
+//    }
 }
-
